--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <body>
     <div class="container">
       <h1>   
-          <i class="fa-solid fa-list-check" style="color: #1673ca;"></i> Taskly 
+          <i class="fa-solid fa-list-check" style="color: #072744;"></i> Taskly 
       </h1>
     </div>
-    <div class="taskcontainer">
-        <h2>My Tasks   <i class="fa-solid fa-square-plus"></i>
-        </h2>
-    </div>
-  <div class="imgcontainer">
-        <img src="C:\Users\delsa\OneDrive\Pictures\Desktop\taskmanager\images\task.png">
-  </div>
+    <img src="images/todo1.jpg">
+      
+              
+         <div class="todocontainer">
+            <h3>To-Do List</h3>
+              <div class="input-container">     
+                <input type="text" id="taskInput" placeholder="Enter a new task">
+                <button class="add-btn"onclick="addTask()">Add</button>
+             </div>
+        </div>
+        <div class=listcontainer>
+        <ul id="taskList"></ul>
+        </div>
+    <script src="script.js"></script>
 </body>
 </html>
