--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <i class="fa-solid fa-list-check" style="color: #072744;"></i> Taskly 
       </h1>
     </div>
-    <img src="images/todo1.jpg" alt="hello">
+    <img src="C:\Users\delsa\OneDrive\Pictures\Desktop\taskmanag\images\todo1.jpg" alt="hello">
       
               
          <div class="todocontainer">
